istio/virtualservice.yaml
# virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: path-routing
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /app1
    route:
    - destination:
        host: app1
        port:
          number: 80
  - match:
    - uri:
        prefix: /app2
    route:
    - destination:
        host: app2
        port:
          number: 80
